[fix] title名の冒頭に空白があると失敗するので削除する
[fix] 空白除去追加

--- a/app/app.ipynb
+++ b/app/app.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0107850c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0a14b8cb",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6023bce3",
    "metadata": {},
    "outputs": [],
@@ -80,6 +80,7 @@
     "    for l in lines:\n",
     "        if 'title' in l:\n",
     "            title = l.split(':')[1]\n",
+    "            title = title.strip() # 空白を除去しないとエラーになる\n",
     "        if 'author' in l:\n",
     "            author = l.split(':')[1]\n",
     "\n",
@@ -123,7 +124,8 @@
     "    # 要約をMarkdownファイルとして出力\n",
     "    save_dir = Path(\"summary\")\n",
     "    save_dir.mkdir(exist_ok=True)\n",
-    "    filename = save_dir / f\"{title}.md\"\n",
+    "    filename = save_dir/f\"{title}.md\"\n",
+    "    print(filename)\n",
     "    text = frontmatter + res\n",
     "    filename.write_text(text,encoding=\"utf-8\")"
    ]
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "99269159",
    "metadata": {},
    "outputs": [],
@@ -159,6 +161,7 @@
     "        matches = re.search(pattern, text)\n",
     "        frontmatter = matches.group(0)\n",
     "        title = matches.group(1).split(':')[1]\n",
+    "        title = title.strip() # 空白を除去しないとエラーになる\n",
     "        # print(frontmatter)\n",
     "\n",
     "        contents = (\n",
