--- a/kindle-summarize-quiz/app.ipynb
+++ b/kindle-summarize-quiz/app.ipynb
@@ -187,9 +187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "youtube-summarize-quiz",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
