[fix] 文字置換関数の名前変更

--- a/youtube-summarize-quiz/app.ipynb
+++ b/youtube-summarize-quiz/app.ipynb
@@ -151,7 +151,7 @@
     "    p_str = str(p)\n",
     "    title_pattern = r\"captions\\\\(.*).ja.srt\"\n",
     "    title = re.search(title_pattern, p_str)[1] # タイトル部分の抽出\n",
-    "    title = replace_chars(title) # 危険文字の変換\n",
+    "    replaced_title = replace_chars(title) # 危険文字の変換\n",
     "\n",
     "    text = p.read_text(encoding='utf-8') # \n",
     "    matchs = re.findall(text_pattern, text)\n",
@@ -170,22 +170,22 @@
     "    for v in data:\n",
     "        # print(v['title'])\n",
     "        v['title'] = replace_chars(v['title'])\n",
-    "        if title == v['title']:\n",
+    "        if replaced_title == v['title']:\n",
     "            LLM_gen_flg = v['LLM_gen']\n",
-    "            print(f\"titleが一致 : {title } : {LLM_gen_flg=}\")\n",
+    "            print(f\"titleが一致 : {replaced_title } : {LLM_gen_flg=}\")\n",
     "            name_match_flg = True\n",
     "            \n",
     "            if LLM_gen_flg==True:\n",
-    "                print(f\"要約済みです : {title}\")\n",
+    "                print(f\"要約済みです : {replaced_title}\")\n",
     "            else:\n",
     "                v['LLM_gen'] = True\n",
     "                res = LLM_gen(contents)\n",
-    "                print(f\"{title},{res=}\")\n",
+    "                print(f\"{replaced_title},{res=}\")\n",
     "            \n",
-    "                file_name = summary_dir / f\"{title}.md\"\n",
+    "                file_name = summary_dir / f\"{replaced_title}.md\"\n",
     "                file_name.write_text(res,encoding='utf-8')\n",
     "    if not name_match_flg:\n",
-    "        print(title)\n",
+    "        print(replaced_title)\n",
     "youtube_links_path.write_text(json.dumps(data, indent=2, ensure_ascii=False), encoding=\"utf-8\")"
    ]
   }
